# inkscape-figures-manager-rs

./: .gitignore  Cargo.toml  README.md
src/: main.rs  shortcuts.rs  style.rs
src/clipboard/: macos.rs  mod.rs
