[package]
name = "inkscape-figures"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
cocoa = "0.25.0"
glob = "0.3.1"
global-hotkey = "0.4.2"
notify = "6.1.1"
objc = "0.2.7"
tao = "0.26.0"
tfc = "0.7.0"
