[package]
name = "inkscape-figures-manager"
version = "0.2.0"
edition = "2021"
authors = ["Cristian Perez Jensen <cristianpjensen@gmail.com>"]
license = "MIT"
description = "A tool to manage figures in Inkscape, and create technical figures fast with shortcuts."
homepage = "https://github.com/cristianpjensen/inkscape-figures-manager-rs"
repository = "https://github.com/cristianpjensen/inkscape-figures-manager-rs"
keywords = ["inkscape", "figures", "cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
cocoa = "0.25.0"
colored = "2.1.0"
glob = "0.3.1"
notify = "6.1.1"
objc = "0.2.7"
rdev = { version = "0.5.3", features = ["unstable_grab"] }
tfc = "0.7.0"
